# Camel

./: .clang-format  .gitignore  .opencmlrc  .prettierrc  .todolist  .updcache  ABOUT  AGENTS.md  AGENT_GUIDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.cn.md  README.md  SECURITY.md  ZEN  build.cmd  conanfile.txt  count.cmd  debug.cmd  debug_install.cmd  draw.cml  hello.cml  info.txt  log.txt  package-lock.json  package.json  roadmap.md  run.cmd  run_install.cmd  tensor_test.cml  test.cml  test.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: build-pypi.yml
.husky/: pre-commit
antlr/: OpenCML.g4  OpenCMLLex.g4  gen.bat
antlr/legacy/: OpenCML-legacy.g4
cmake/: Options.cmake  options.json
cml/: std.cml
demo/: ast.cml  error.cml  exhi copy.cml  exhi-ast.txt  exhi-cst.txt  exhi.cml  fmt.cml  full.cml  std.cml  test.cml  test2.cml  unit.cml
demo/cnn/: cnn.cml
demo/examples/: eval.ncm  ml.cml
demo/feat/: anno.cml  expr.cml  functor.cml  gir.txt  literal.cml  prec.cml  varies.cml
demo/mlp/: math.cml  mlp.cml  nn.cml  std.cml
demo/parser/: test.cml
demo/phot/: module.cml  system.cml
demo/photfdtd/: arc_ex.cml
demo/psl/: demo.psl  tmp.cml
docs/: CODE_OF_CONDUCT.cn.md  CONTRIBUTING.cn.md  Camel.asdl  README.cn.md  SECURITY.cn.md  build-fib-crash-final-fix.md  build-fib-crash-investigation.md  build-options.cn.md  build-options.en.md  cli.cn.md  cli.md  cmo-design.md  cpp_export_build.md  envcfg.md  jit-fib-debug-notes.md  keywords.md  milestones.md  npm-scripts.md  pypi-packaging.md  setup.cn.md  setup.en.md  typesys.md
docs/design/: JIT_ARCHITECTURE.md  cli.md  keywords.md  zen.md
docs/jit/: README.md  bytecode-to-asm.md  optimization-architecture.md
docs/language/: 01_introduction.md  02_lexical.md  03_data_model.md  04_execution_model.md  05_modules.md  06_expressions.md  07_statements.md  08_top_level_and_grammar.md  README.md
docs/paper/: concepts.md  framework.md  otherlangs.md  related.md  segments.md
docs/scripts/: concepts.md
docs/technical/: 00_language_reference.md  01_overview.md  (+24 more)
libs/python/: CMakeLists.txt  README.md  executor.cpp  executor.h  module.cpp  module.h  operators.cpp  operators.h  type.cpp  type.h
modules/: camel_module.cmake  camel_module_abi.cpp
modules/fs/: CMakeLists.txt  executor.cpp  executor.h  module.cpp  module.h  operators.cpp  operators.h
modules/io/: CMakeLists.txt  executor.cpp  executor.h  module.cpp  module.h  operators.cpp  operators.h
modules/json/: CMakeLists.txt  executor.cpp  executor.h  module.cpp  module.h  operators.cpp  operators.h
modules/math/: CMakeLists.txt  executor.cpp  executor.h  module.cpp  module.h  operators.cpp  operators.h
modules/os/: CMakeLists.txt  executor.cpp  executor.h  module.cpp  module.h  operators.cpp  operators.h
modules/para/: CMakeLists.txt  module.cpp  module.h
modules/pyplot/: CMakeLists.txt  README.md  executor.cpp  executor.h  module.cpp  module.h  operators.cpp  operators.h
modules/python/: CMakeLists.txt  README.md  bridge_runtime.cpp  executor.cpp  executor.h  module.cpp  module.h  operators.cpp  operators.h  type.cpp  type.h
modules/random/: CMakeLists.txt  executor.cpp  executor.h  module.cpp  module.h  operators.cpp  operators.h
modules/re/: CMakeLists.txt  executor.cpp  executor.h  module.cpp  module.h  operators.cpp  operators.h
modules/statistics/: CMakeLists.txt  executor.cpp  executor.h  module.cpp  module.h  operators.cpp  operators.h
modules/sys/: CMakeLists.txt  executor.cpp  executor.h  module.cpp  module.h  operators.cpp  operators.h
modules/tensor/: CMakeLists.txt  dlpack.h  executor.cpp  executor.h  module.cpp  module.h  operators.cpp  operators.h  runtime.cpp  runtime.h  type.cpp  type.h
phot/: ex.psl  std.psl  tr.psl
pypi/camel-lang/: LICENSE  MANIFEST.in  README.md  cli.py  pyproject.toml  setup.py
pypi/camel-lang/src/camel/: __init__.py  cli.py
scripts/: build.js  check.js  clean.js  cmake-opts.js  cnt.js  code_stats.py  codegen.js  collect-out.js  common.js  config.js  debug.js  fix.js  format.js  gen_cst_dump.js  gitcnt.js  install.js  profile.js  psrgen.js  pypi-rollup.js  pypi_rollup.js  setver.js  sync-python-sdks.js  test-all.js  test.js  update.js
src/: config.cpp  config.h  main.cpp
stdlib/: ctrl.cml  lib0.cml  perf.cml  std.cml
test/: debug.json  exhi.cml  fib.cml  full.cml  new.cml  tensor_test.cml  test.cml  unit.cml  zen.cml
tools/: CMakeLists.txt  libcamel_tool.cmake
tools/camel-cli/: CMakeLists.txt  build_config.h.in  config.cpp  config.h  main.cpp  opencmlrc.cpp  opencmlrc.h
tools/camel-cpp/: CMakeLists.txt  main.cpp
tools/codegen/: CMakeLists.txt  main.cpp
tools/debugger/: CMakeLists.txt  PRODUCT_PRINCIPLES.md  README.md  build_config.h.in  debugger_server.cpp  debugger_server.h  embed_ui.py  main.cpp  mem_monitor.cpp  mem_monitor.h  serve_ui.py  server.cpp  server.h
tools/debugger/docs/: API.md
tools/debugger/src/: compile.cpp  compile.h  gir_json.cpp  gir_json.h  repl.cpp  repl.h  run.cpp  run.h  spawn.cpp  spawn.h  state.cpp  state.h  worker.cpp  worker.h
tools/debugger/src/command/: command.h  commands.cpp  commands.h  dispatcher.cpp  dispatcher.h
tools/debugger/ui/: index.html  package-lock.json  package.json  vite.config.js
tools/debugger/ui/css/: style.css
tools/debugger/ui/js/: api.js  app.js  graph.js  hex.js  monitor.js
tools/debugger/ui/src/: App.vue  main.js
tools/debugger/ui/src/assets/: style.css
tools/debugger/ui/src/components/: AssertionOverlay.vue  FilePickerModal.vue  GirNode.vue  LogPanel.vue  NavHeader.vue  RegionCard.vue  RegionList.vue  Sidebar.vue
tools/debugger/ui/src/composables/: useApi.js
tools/debugger/ui/src/router/: index.js
tools/debugger/ui/src/stores/: app.js
tools/debugger/ui/src/utils/: hex.js  memory.js
tools/debugger/ui/src/views/: Empty.vue  Gir.vue  Memory.vue  Run.vue  ScriptLayout.vue
tools/format/: CMakeLists.txt  fmt.cpp  fmt.h  main.cpp
tools/lang-server/: CMakeLists.txt  main.cpp
tools/profiler/: CMakeLists.txt  main.cpp
(+1261 files in other folders)
